[build-system]
requires = ["setuptools>=64", "setuptools-scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "substack-api"
description = "Unofficial wrapper for the Substack API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["requests>=2.32.3"]
dynamic = ["version"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.6",
    "mkdocstrings-python>=1.16.2",
    "pytest>=8.3.4",
    "ruff>=0.9.9",
]

[project.urls]
"Homepage" = "https://github.com/nhagar/substack_api"
"Bug Tracker" = "https://github.com/nhagar/substack_api/issues"
"Documentation" = "https://nhagar.github.io/substack_api/"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
